apps/mautrix/twitter/overlays/nishir/patch-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twitter
spec:
  hostnames:
    - twitter.i.shikanime.studio
  parentRefs:
    - name: twitter
      sectionName: https
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twitter-redirect
spec:
  hostnames:
    - twitter.i.shikanime.studio
  parentRefs:
    - name: twitter
      sectionName: http
